CHATS_SIT/force-app/main/default/objects/batchsit_t_sbsd_case_copay__x.object
<CustomObject>
    <description>batchsit$t_sbsd_case_copay</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>batchsit$t_sbsd_case_copay</externalName>
    <fields>
        <fullName>amt_copay_case_assesd__c</fullName>
        <description>amt_copay_case_assesd</description>
        <externalDeveloperName>amt_copay_case_assesd</externalDeveloperName>
        <label>Parent Fee</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amt_copay_case_ft__c</fullName>
        <description>amt_copay_case_ft</description>
        <externalDeveloperName>amt_copay_case_ft</externalDeveloperName>
        <label>Full Time Fee</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amt_copay_case_ft_qlty__c</fullName>
        <description>amt_copay_case_ft_qlty</description>
        <externalDeveloperName>amt_copay_case_ft_qlty</externalDeveloperName>
        <label>Quality Rating Discounted Full Time</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amt_copay_case_pt__c</fullName>
        <description>amt_copay_case_pt</description>
        <externalDeveloperName>amt_copay_case_pt</externalDeveloperName>
        <label>Part Time Fee</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amt_copay_case_pt_qlty__c</fullName>
        <description>amt_copay_case_pt_qlty</description>
        <externalDeveloperName>amt_copay_case_pt_qlty</externalDeveloperName>
        <label>Quality Rating Discounted Part Time</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cde_reason_ovrd__c</fullName>
        <description>cde_reason_ovrd</description>
        <externalDeveloperName>cde_reason_ovrd</externalDeveloperName>
        <label>Override Reason</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_rec_copay__c</fullName>
        <description>cde_rec_copay</description>
        <externalDeveloperName>cde_rec_copay</externalDeveloperName>
        <label>Recommended Parent Fee Unit</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>createdbyid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>createdbyid</description>
        <externalDeveloperName>createdbyid</externalDeveloperName>
        <label>Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>batchsit_t_sbsd_case_copay</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>createddate__c</fullName>
        <description>createddate</description>
        <externalDeveloperName>createddate</externalDeveloperName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dte_begin_effv__c</fullName>
        <description>dte_begin_effv</description>
        <externalDeveloperName>dte_begin_effv</externalDeveloperName>
        <label>Effective Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dte_end_effv__c</fullName>
        <description>dte_end_effv</description>
        <externalDeveloperName>dte_end_effv</externalDeveloperName>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>idn_case__c</fullName>
        <description>idn_case</description>
        <externalDeveloperName>idn_case</externalDeveloperName>
        <label>Case ID</label>
        <length>50</length>
        <referenceTargetField>T_SBSD_CASE__c.IDN_EXTNL__c</referenceTargetField>
        <referenceTo>T_SBSD_CASE__c</referenceTo>
        <relationshipLabel>Case Parent Fee</relationshipLabel>
        <relationshipName>batchsit_t_sbsd_case_copay</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>idn_sbsd_case_copay__c</fullName>
        <description>idn_sbsd_case_copay</description>
        <externalDeveloperName>idn_sbsd_case_copay</externalDeveloperName>
        <label>Copay ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ind_qlty__c</fullName>
        <description>ind_qlty</description>
        <externalDeveloperName>ind_qlty</externalDeveloperName>
        <label>Auth on case with quality rated provider</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lastmodifiedbyid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>lastmodifiedbyid</description>
        <externalDeveloperName>lastmodifiedbyid</externalDeveloperName>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>batchsit_t_sbsd_case_copay1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>lastmodifieddate__c</fullName>
        <description>lastmodifieddate</description>
        <externalDeveloperName>lastmodifieddate</externalDeveloperName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>nbr_seq_hist__c</fullName>
        <description>nbr_seq_hist</description>
        <externalDeveloperName>nbr_seq_hist</externalDeveloperName>
        <label>Number Sequence history</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Case Parent Fee</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>Case Parent Fee</pluralLabel>
</CustomObject>