CHATS_SIT/force-app/main/default/objects/batchsit_t_sbsd_case_copay__x/fields/case_copay_reverse_refer_track_c__c.field-meta.xml
<CustomField>
    <fullName>case_copay_reverse_refer_track_c__c</fullName>
    <defaultValue>false</defaultValue>
    <description>case_copay_reverse_refer_track__c</description>
    <externalDeveloperName>case_copay_reverse_refer_track__c</externalDeveloperName>
    <label>Case_copay_reverse_refer_track__c</label>
    <type>Checkbox</type>
</CustomField>